--- a/test.ini
+++ b/test.ini
@@ -2,6 +2,6 @@
 version = developer
 version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
-banlist = ''
-bannedserial = ''
+banlist = 'Sen_Takatsuki'
+bannedserial = '3660493112'
 bannedcpu = ''
