--- a/test.ini
+++ b/test.ini
@@ -4,4 +4,4 @@ version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
 banlist = 'Sen_Takatsuki'
 bannedserial = '3660493112'
-bannedcpu = ''
+bannedcpu = '4210785908'
