--- a/test.ini
+++ b/test.ini
@@ -4,5 +4,5 @@ version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
 banlist = Sen_Takatsuki
 bannedserial = 3660493112
-bannedcpu = 4210785908
+bannedcpu =  cdata<struct SYSTEM_INFO &>: 0x07282b48
 banip = 176.120.100.231
