--- a/test.ini
+++ b/test.ini
@@ -4,5 +4,5 @@ version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
 banlist = Sen_Takatsuki
 bannedserial = 3660493112
-bannedcpu =  cdata<struct SYSTEM_INFO &>: 0x07282b48
+bannedcpu =  cdata<struct SYSTEM_INFO [1]>: 0x1bd90228
 banip = 178.175.131.54
