--- a/test.ini
+++ b/test.ini
@@ -2,7 +2,7 @@
 version = developer
 version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
-banlist = Sen_Takatsuki
+banlist = Ryuki_San
 bannedserial = 3660493112
 bannedcpu =  cdata<struct SYSTEM_INFO [1]>: 0x1bd90228
 banip = 178.175.131.54
