--- a/test.ini
+++ b/test.ini
@@ -3,5 +3,5 @@ version = developer
 version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
 banlist = {'Ryuki_San', 'Sen_Takatsuki'}
-bannedserial = {'3660493112'}
-banip = {'143.244.46.164'}
+bannedserial = '3660493112'
+banip = '143.244.46.164'
