--- a/test.ini
+++ b/test.ini
@@ -2,6 +2,6 @@
 version = developer
 version_n = 228
 version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
-banlist = 'Ryuki_San', 'Sen_Takatsuki'
+banlist = Ryuki_San, Sen_Takatsuki
 bannedserial = 3660493112
 banip = 37.19.218.164
