--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,7 @@
-[info]
-version = developer
-version_n = 228
-version_info = Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу
-banlist = 'Ryuki_San', 'Sen_Takatsuki'
-bannedserial = 3660493112
-banip = 37.19.218.164
+{
+    "info" : {
+        "version" : "developer",
+        "version_n" : "228",
+        "version_info" : "Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу, Тестируем абобу"
+    }
+}
